// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. default layout 1`] = `
<div>
  <div>
    <img
      alt=""
      src="http://example.com/image.jpg"
    />
    <div>
      <Gradient
        degrees={264}
      />
    </div>
  </div>
</div>
`;

exports[`2. default layout without uri 1`] = `
<div>
  <div>
    <img
      alt=""
      src=""
    />
    <div>
      <Gradient
        degrees={264}
      />
    </div>
  </div>
</div>
`;

exports[`3. handle layout change 1`] = `
<div>
  <div>
    <img
      alt=""
      src="http://example.com/image.jpg"
    />
    <div>
      <Gradient
        degrees={264}
      >
        <div>
          <Svg
            height={164.46700507614213}
            version="1.1"
            viewBox="145 50 108 120"
            width={164.46700507614213}
          >
            <G
              fill="none"
              fillRule="evenodd"
              stroke="none"
              strokeWidth="1"
            >
              <Path
                d="6a6c07166e9c40e4f62e57af2b507822"
                fill="#FFFFFF"
              />
            </G>
          </Svg>
        </div>
      </Gradient>
    </div>
  </div>
</div>
`;
